Bug 697048 - Regression: missing drop shadow starting with 093bd18bd923644fcd25c507088c0ebc63b4c320
Summary: Regression: missing drop shadow starting with 093bd18bd923644fcd25c507088c0eb...
Status: RESOLVED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: Graphics Library (show other bugs)
Version: master
Hardware: PC All
: P4 normal
Assignee: Ray Johnston
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-08-15 11:17 UTC by Marcos H. Woehrmann
Modified: 2017-02-24 12:34 UTC (History)
1 user (show)

See Also:
Customer:
Word Size: ---


Attachments
testdrop3.txt (1.14 KB, application/pdf)
2017-02-23 07:01 UTC, Robin Watts
Details
testdrop5.pdf (1.15 KB, application/pdf)
2017-02-24 10:18 UTC, Robin Watts
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Marcos H. Woehrmann 2016-08-15 11:17:32 UTC
Starting with 093bd18bd923644fcd25c507088c0ebc63b4c320 the attached PDF file is rendered without its drop shadow when converted to pkmraw.  Converting to ppmraw works as expected.

The command line I'm using for testing:

  bin/gs sDEVICE=pkmraw -o test.pkm -r300 ./testdrop.pdf
Comment 2 Robin Watts 2017-02-23 07:01:56 UTC
Created attachment 13421 [details]
testdrop3.txt

Greatly simplified file.

We start with a simple cyan background, then plot a black rectangle drawn on top of it, using Multiply blendmode, with an overprint mode of 1.

  gs -sDEVICE=ppmraw -o out.ppm -r72 testdrop3.pdf

shows the rectangle as expected.

  gs -sDEVICE=pkmraw -o out.pkm -r72 testdrop3.pdf

shows no markings from the rectangle.
Comment 3 Robin Watts 2017-02-24 10:18:48 UTC
Created attachment 13426 [details]
testdrop5.pdf

Better example file (silly typo fixed).
Comment 4 Robin Watts 2017-02-24 12:34:08 UTC
Fixed in:

commit af3c1d10726b2d932d951bf021193cbd5bcc734d
Author: Robin Watts <robin.watts@artifex.com>
Date:   Fri Feb 24 19:05:52 2017 +0000

    Bug 697048: Fix compatible overprint blend mode.

    Fix from Michael Vrhel.

    Compatible overprint is operating in subtractive color spaces, so
    a 'zero' component actually means 0xFF.