Bug 697048: Fix compatible overprint blend mode.

Fix from Michael Vrhel.

Compatible overprint is operating in subtractive color spaces, so
a 'zero' component actually means 0xFF.